--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/sequelize-adapter": "^1.0.2",
     "@tanstack/react-table": "^8.0.0-beta.3",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
+    "nodemailer": "^6.7.5",
+    "pg": "^8.7.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sequelize": "^6.20.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.38",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
