--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^4.3.4",
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sequelize": "^6.20.1"
@@ -23,6 +24,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.38",
     "@types/nodemailer": "^6.4.4",
+    "@types/pg": "^8.6.5",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
