--- a/package.json
+++ b/package.json
@@ -9,28 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@next-auth/sequelize-adapter": "^1.0.2",
+    "@prisma/client": "^3.14.0",
     "@tanstack/react-table": "^8.0.0-beta.3",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "nodemailer": "^6.7.5",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "sequelize": "^6.20.1"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.38",
     "@types/nodemailer": "^6.4.4",
-    "@types/pg": "^8.6.5",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
+    "prisma": "^3.14.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
